# fast-math

./: LICENSE  README.md  fast-math.cabal
Numeric/: FastMath.hs
Numeric/FastMath/: Approximation.hs  Infinitesimal.hs  NaN.hs  SignedZeros.hs
test/: benchl2.hs  test.hs
