name:           fast-math
version:        1.0.2
synopsis:       Non IEEE-754 compliant compile-time floating-point optimisations
description:
    The "Numeric.FastMath" module brings into scope many unsafe @RULES@ for
    'Float's and 'Double's that can greatly improve run time performance.
    It is roughly equivalent to gcc\'s @-ffast-math@ compiler flag.
    Optimisation (at least @-O1@) must be enabled for any @RULES@ to take effect.
    .
    These rules are unsafe because they don't strictly adhere to the
    IEEE-754 regulations and may subtly change the results of your numeric computations.
    See the <http://github.com/liyang/fast-math/ README> on github for more details.

license:        BSD3
license-file:   LICENSE
author:         Liyang HU and Mike Izbicki
maintainer:     fast-math@liyang.hu
copyright:      © 2011, Liyang HU
category:       Math, Numeric
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
    type:       git
    location:   http://github.com/liyang/fast-math

library
    default-language: Haskell2010
    build-depends:
        base >= 3 && < 5
    exposed-modules:
        Numeric.FastMath
        Numeric.FastMath.Approximation
        Numeric.FastMath.NaN
        Numeric.FastMath.SignedZeros
    default-extensions:
        NoImplicitPrelude
        MagicHash
    ghc-options:
        -Wall
        -fno-warn-orphans

